--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "lucide-react": "^0.378.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chat-engine": "^1.11.28",
     "react-dom": "^18.2.0",
