--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
-    "axios": "^1.6.8",
+    "@tanstack/react-query": "^5.37.1",
+    "axios": "^1.7.1",
     "firebase": "^10.11.1",
     "lucide-react": "^0.378.0",
     "moment": "^2.30.1",
@@ -20,6 +21,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-phone-input-2": "^2.15.1",
+    "react-player": "^2.16.0",
+    "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
