--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@tanstack/react-query": "^5.37.1",
+    "africastalking": "^0.6.7",
     "axios": "^1.7.1",
     "firebase": "^10.11.1",
     "lucide-react": "^0.378.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-chat-engine": "^1.11.28",
+    "react-chat-engine": "^0.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-phone-input-2": "^2.15.1",
