--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.37.1",
     "africastalking": "^0.6.7",
     "axios": "^1.7.1",
+    "dompurify": "^3.1.5",
     "firebase": "^10.11.1",
     "lucide-react": "^0.378.0",
     "moment": "^2.30.1",
